--- a/harrastukset2.html
+++ b/harrastukset2.html
@@ -73,7 +73,7 @@
   </div>
   <section class="container">
     <div class="image-section">
-        <img src="cs.jpg" alt="cs">
+        <img src="Cs.jpg" alt="CS">
     </div>
     <div class="text-section">
         <h1>Videopelaaminen</h1>
